# tasks4-django-onxp

./: manage.py  pyproject.toml
task4_django/: asgi.py  settings.py  urls.py  wsgi.py
